--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ section {
 #profile {
   display: flex;
   justify-content: center;
+  
   gap: 5rem;
   height: 80vh;
 }
@@ -181,10 +182,11 @@ section {
   height: 500px;
   width: 500px;
   margin: auto 0;
+  
   /* padding-bottom: 40px; */
 }
 .section__pic-container img{
-   
+  
     height: 200px;
     width: 190px;
     margin: auto 0;
@@ -223,15 +225,18 @@ section {
   display: flex;
   justify-content: center;
   margin-top: 1rem;
-  gap: 1rem;
+  gap: 1.3rem;
 }
 
 /* ICONS */
 
 .icon {
   cursor: pointer;
-  height: 2rem;
+  height: 3rem;
+
+ 
 }
+
 
 /* BUTTONS */
 
@@ -409,8 +414,37 @@ article .icon {
   font-size: 20px;
   font-weight: bold;
 }
+.links-container{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 1.3rem;
+}
+.links-container a{
+ font-size: 15px;
+ text-decoration: none;
+}
 
+ .git-link,
+ .livedemo-link {
+ text-decoration: none;
+ font-weight: 600;
+  transition: all 300ms ease;
+  padding: 0.8rem;
+  width: 5rem;
+  border-radius: 2rem;
+  border: solid 2px black;
+}
+ 
 
+ .git-link:hover ,
+ .livedemo-link:hover{
+cursor: pointer;
+background: rgb(53 53 53);
+color: white;
+border: rgb(255, 255, 255) 0.1rem solid;
+
+ }
 /* #projects {
   position: relative;
  
@@ -432,6 +466,7 @@ article .icon {
   color: black;
   
 }
+
 
 /* .project-btn {
   color: black;
@@ -506,6 +541,16 @@ footer p {
     #projects {
       height: fit-content;
     }
+    .project-container{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+      flex-wrap: wrap;
+      margin: 20px;
+      gap: 25px;
+    
+    }
   }
   
   @media screen and (max-width: 1200px) {
@@ -541,6 +586,16 @@ footer p {
     .about-containers {
       margin-top: 0;
     }
+    .project-container{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+      flex-wrap: wrap;
+      margin: 20px;
+      gap: 25px;
+    
+    }
   }
   
   @media screen and (max-width:390px) {
@@ -570,6 +625,166 @@ footer p {
     .contact-info-container p,
     .nav-links li a {
       font-size: 1rem;
+    }
+    .icon {
+      
+      height: 2rem;
+    
+     
+    }
+    .experience-sub-title {
+      font-size: 1.25rem;
+    }
+    .logo {
+      font-size: 1.5rem;
+    }
+    .nav-links {
+      flex-direction: column;
+      gap: 0.5rem;
+      text-align: center;
+    }
+    .section__pic-container {
+      width: auto;
+      height: 46vw;
+      justify-content: center;
+      padding-bottom: 40px;
+    }
+   
+    .section__text__p2 {
+      font-size: 1.2rem;
+    }
+    .title {
+      font-size: 2rem;
+    }
+    .text-container {
+      text-align: justify;
+    }
+    
+    .project-container{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+      flex-wrap: wrap;
+      margin: 20px;
+      gap: 25px;
+    
+    }
+    .box-container{
+      width: 280px;
+      height: 350px;
+     
+     
+      
+    
+    }
+    .box-container div img{
+     width: 230px;
+     height: 150px;
+    
+     
+      
+    
+    }
+    .project-name{
+      text-align: center;
+      color: black;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+    .details-container {
+      padding: 1rem;
+      
+    }
+    #contact {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      height: 75vh;
+      padding-top:40%;
+      
+    
+     
+     
+    }
+    
+    .contact-info-upper-container {
+     
+      padding: 0.5rem;
+      
+    }
+    
+    .contact-info-container {
+     
+      gap: 0.2rem;
+      margin: 0.8rem;
+      width: 220px;
+    }
+    
+    .contact-info-container p {
+      font-size: 16px;
+      
+    }
+    
+    .contact-icon {
+      cursor: default;
+    
+    }
+    
+    .email-icon {
+      height: 1.8rem;
+    
+    }
+    .phone-icon{
+        height: 1.8rem;
+      
+    }
+  
+    
+   
+    
+    
+    
+    
+   
+
+
+  }
+  @media screen and (max-width:660px) {
+    #contact,
+    footer {
+      height: 55vh;
+    }
+    #profile {
+      height: 90vh;
+      margin-bottom: 0;
+    }
+    article {
+      font-size: 0.9rem;
+    }
+    footer nav {
+      height: fit-content;
+      margin-bottom: 2rem;
+    }
+    .about-containers,
+    .contact-info-upper-container,
+    .btn-container {
+      flex-wrap: wrap;
+    }
+    .contact-info-container {
+      margin: 0;
+    }
+    .contact-info-container p,
+    .nav-links li a {
+      font-size: 1rem;
+    }
+    .icon {
+      
+      height: 2rem;
+    
+     
     }
     .experience-sub-title {
       font-size: 1.25rem;
